# SanitizerPlayground

./: CMakeLists.txt  README.md
cmake/: Sanitize.cmake
src/: CMakeLists.txt  global.c  leak.cpp  stack.c  tiny.cpp  uar.cpp  undefined.cpp  uninit.c
